Change hotel name to Aurora and update job listings
Updated the vacatures page to reflect the new hotel name and added job listings for various positions.

--- a/vacatures.html
+++ b/vacatures.html
@@ -3,52 +3,195 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>📋 Vacatures — Hotel Scoutingkamp</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <title>Vacatures — Hotel Aurora</title>
+  <link rel="stylesheet" href="style.css" />
+  <meta name="description" content="Openstaande vacatures bij Hotel Aurora — word onderdeel van ons team in een groene, gastvrije omgeving.">
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="index.html">🏨 Hotel Scoutingkamp</a>
-      <nav class="main-nav" aria-label="Hoofdmenu">
+      <a class="brand" href="index.html">Hotel Aurora</a>
+      <nav class="main-nav" aria-label="Hoofd navigatie">
         <a href="index.html">Home</a>
-        <a href="incheck.html">Inchecken</a>
-        <a href="over-ons.html">Team</a>
+        <a href="team.html">Ons team</a>
         <a href="vacatures.html">Vacatures</a>
         <a href="gastenboek.html">Gastenboek</a>
       </nav>
+      <a class="book-btn" href="vacatures.html">Bekijk vacatures</a>
     </div>
   </header>
 
-  <main class="container">
-    <section class="card">
-      <h2>Vacatures (spel)</h2>
-      <p>Verkrijg rollen door taken uit te voeren tijdens het kamp. Rollen zijn tijdelijk en onderdeel van het spel.</p>
+  <main class="container section">
+    <h1>Vacatures</h1>
+    <p class="lead">Wij zijn regelmatig op zoek naar betrokken collega’s. Hieronder een overzicht van onze huidige vacatures.</p>
 
-      <h3>Open vacature</h3>
-      <article class="vacature">
-        <h4>🧹 Schoonmaker</h4>
-        <p>Verantwoordelijkheden: kamers netjes houden, bedden rechttrekken, glinsterprijs verdienen.</p>
+    <section class="jobs-grid">
+      <!-- Vacature 1 -->
+      <article class="job card">
+        <h3>Front Office Medewerker (parttime)</h3>
+        <p class="muted">Een gastvrije duizendpoot voor receptie en telefonie.</p>
+
+        <h4>Omschrijving</h4>
+        <p>Je verwelkomt gasten, verzorgt check-in / check-out en verzorgt telefoon- en e-mailverkeer. Je bent het visitekaartje van Aurora.</p>
+
+        <h4>Taken</h4>
+        <ul>
+          <li>Inchecken en uitchecken van gasten</li>
+          <li>Reserveringen beheren en communiceren met housekeeping</li>
+          <li>Gasten adviseren over lokale activiteiten</li>
+        </ul>
+
+        <h4>Wat wij bieden</h4>
+        <ul>
+          <li>Aantrekkelijke arbeidsvoorwaarden</li>
+          <li>Flexibele uren en een warm, betrokken team</li>
+          <li>Doorgroeimogelijkheden en opleidingsbudget</li>
+        </ul>
+
+        <div class="job-actions">
+          <button class="btn btn-primary apply-btn" data-title="Front Office Medewerker">Solliciteer nu</button>
+        </div>
       </article>
 
-      <h3>Nog niet ingevulde rol</h3>
-      <article class="vacature open">
-        <h4>🌙 Nachtportier (open)</h4>
-        <p>Verantwoordelijkheid: ’s nachts op patrouille en luisteren naar spookverhalen (spannend!).</p>
-        <p class="muted">Leiding bepaalt wie de rol krijgt — maak er punten of beloningen aan vast.</p>
+      <!-- Vacature 2 -->
+      <article class="job card">
+        <h3>Housekeeping Supervisor (fulltime)</h3>
+        <p class="muted">Leidinggevende in housekeeping met oog voor kwaliteitszorg.</p>
+
+        <h4>Omschrijving</h4>
+        <p>Leiden van het housekeeping-team, kwaliteitscontroles en de planning van schoonmaakwerkzaamheden.</p>
+
+        <h4>Taken</h4>
+        <ul>
+          <li>Aansturen en trainen van medewerkers</li>
+          <li>Voorraadbeheer schoonmaakmiddelen</li>
+          <li>Waarborgen van hygiënenormen</li>
+        </ul>
+
+        <h4>Wat wij bieden</h4>
+        <ul>
+          <li>Fulltime dienstverband met marktconform salaris</li>
+          <li>Reiskostenvergoeding en pensioenregeling</li>
+          <li>Een prettige werkomgeving en professionele ondersteuning</li>
+        </ul>
+
+        <div class="job-actions">
+          <button class="btn btn-primary apply-btn" data-title="Housekeeping Supervisor">Solliciteer nu</button>
+        </div>
       </article>
 
-      <p>Wil je meer rollen toevoegen? Kopieer eenvoudig een &lt;article class="vacature"&gt; en pas titel en tekst aan.</p>
+      <!-- Vacature 3 -->
+      <article class="job card">
+        <h3>Allround Activiteitenbegeleider (seizoen)</h3>
+        <p class="muted">Begeleiden van outdooractiviteiten en workshops voor gasten.</p>
+
+        <h4>Omschrijving</h4>
+        <p>Organiseren en uitvoeren van groepsactiviteiten, begeleiden van wandelingen en samenwerken met lokale partners.</p>
+
+        <h4>Taken</h4>
+        <ul>
+          <li>Leiden van wandel- en fietstochten</li>
+          <li>Voorbereiden van workshops en materiaal</li>
+          <li>Contact onderhouden met lokale leveranciers</li>
+        </ul>
+
+        <h4>Wat wij bieden</h4>
+        <ul>
+          <li>Marktconforme vergoeding</li>
+          <li>Leuke werkomgeving in de natuur</li>
+          <li>Korting op verblijf en maaltijden</li>
+        </ul>
+
+        <div class="job-actions">
+          <button class="btn btn-primary apply-btn" data-title="Allround Activiteitenbegeleider">Solliciteer nu</button>
+        </div>
+      </article>
     </section>
+
+    <!-- Modal (frontend-only sollicitatie) -->
+    <div id="apply-modal" class="modal" aria-hidden="true">
+      <div class="modal-panel" role="dialog" aria-modal="true" aria-labelledby="modal-title">
+        <button class="modal-close" id="modal-close" aria-label="Sluiten">&times;</button>
+        <h2 id="modal-title">Solliciteren bij Hotel Aurora</h2>
+        <p id="modal-job" class="muted"></p>
+
+        <form id="apply-form">
+          <label>
+            Voor- en achternaam
+            <input type="text" name="name" required />
+          </label>
+
+          <label>
+            E-mail
+            <input type="email" name="email" required />
+          </label>
+
+          <label>
+            Motivatie (kort)
+            <textarea name="message" rows="4" required></textarea>
+          </label>
+
+          <div class="form-actions">
+            <button type="submit" class="btn btn-primary">Verstuur (frontend demo)</button>
+            <button type="button" class="btn btn-outline" id="modal-cancel">Annuleren</button>
+          </div>
+
+          <p class="note muted">
+            Let op: dit is een frontend-demo. In een productiesysteem maakt u de sollicitaties over naar uw backend of ATS.
+          </p>
+        </form>
+      </div>
+    </div>
   </main>
 
   <footer class="site-footer">
-    <div class="container">
-      <small>© Hotel Scoutingkamp</small>
+    <div class="container footer-inner">
+      <div>
+        <h3>Hotel Aurora</h3>
+        <p>Rust & gastvrijheid.</p>
+      </div>
     </div>
   </footer>
+
+  <script>
+    // Modal sollicitatie — frontend-only behaviour
+    const modal = document.getElementById('apply-modal');
+    const modalJob = document.getElementById('modal-job');
+    const modalTitle = document.getElementById('modal-title');
+    const closeBtn = document.getElementById('modal-close');
+    const cancelBtn = document.getElementById('modal-cancel');
+    const applyForm = document.getElementById('apply-form');
+
+    function openModal(jobTitle) {
+      modalJob.textContent = jobTitle;
+      modal.setAttribute('aria-hidden', 'false');
+      modal.classList.add('open');
+      document.body.style.overflow = 'hidden';
+    }
+
+    function closeModal() {
+      modal.setAttribute('aria-hidden', 'true');
+      modal.classList.remove('open');
+      document.body.style.overflow = '';
+      applyForm.reset();
+    }
+
+    document.querySelectorAll('.apply-btn').forEach(btn => {
+      btn.addEventListener('click', () => openModal(btn.dataset.title));
+    });
+
+    closeBtn.addEventListener('click', closeModal);
+    cancelBtn.addEventListener('click', closeModal);
+    modal.addEventListener('click', (e) => { if (e.target === modal) closeModal(); });
+
+    applyForm.addEventListener('submit', (e) => {
+      e.preventDefault();
+      // Frontend-only feedback
+      const formData = new FormData(applyForm);
+      modalTitle.textContent = 'Bedankt voor je sollicitatie!';
+      modalJob.textContent = `We hebben je bericht ontvangen, ${formData.get('name')}.`;
+      // In echte implementatie: verzend naar backend/ATS.
+    });
+  </script>
 </body>
 </html>
