Fix 'Beschikbaarheid' link and update comments
Updated the 'Beschikbaarheid' link to point to 'beschikbaarheid.html' and added a comment for the vacancy list layout.

--- a/vacatures.html
+++ b/vacatures.html
@@ -16,7 +16,7 @@
         <a href="team.html">Ons team</a>
         <a href="vacatures.html">Vacatures</a>
         <a href="gastenboek.html">Gastenboek</a>
-        <a class="cta" href="#apply" role="button">Beschikbaarheid</a>
+        <a class="cta" href="beschikbaarheid.html" role="button">Beschikbaarheid</a>
       </nav>
     </div>
   </header>
@@ -28,9 +28,9 @@
         <h2 style="margin-top:.5rem;">Werken bij Hotel Aurora</h2>
         <p class="prose" style="margin-top:1rem;">Wij zoeken betrokken collega's voor ons kleine, ervaren team. Interesse? Bekijk de vacatures en solliciteer direct via het formulier onderaan.</p>
 
-        <!-- Vacancy list -->
+        <!-- Vacancy list: twee kolommen on desktop, één kolom on mobile -->
         <div style="margin-top:1.25rem;">
-          <div class="vacancy">
+          <div class="grid two-up vacancy">
             <!-- Vacancy 1 -->
             <div class="card" id="vac-1">
               <div style="display:flex; justify-content:space-between; align-items:center;">
