Update link for Beschikbaarheid page

--- a/team.html
+++ b/team.html
@@ -16,7 +16,7 @@
         <a href="team.html">Ons team</a>
         <a href="vacatures.html">Vacatures</a>
         <a href="gastenboek.html">Gastenboek</a>
-        <a class="cta" href="vacatures.html" role="button">Beschikbaarheid</a>
+        <a class="cta" href="beschikbaarheid.html" role="button">Beschikbaarheid</a>
       </nav>
     </div>
   </header>
