Update link for 'Beschikbaarheid' page

--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
         <a href="team.html">Ons team</a>
         <a href="vacatures.html">Vacatures</a>
         <a href="gastenboek.html">Gastenboek</a>
-        <a class="cta" href="vacatures.html" role="button">Beschikbaarheid</a>
+        <a class="cta" href="beschikbaarheid.html" role="button">Beschikbaarheid</a>
       </nav>
     </div>
   </header>
 
   <!-- HERO: full-width image allowed; text content inside .container -->
   <section class="hero" aria-labelledby="hero-heading">
-    <!-- hero full-width image -->
     <!-- Afbeelding: ruime hotelomgeving met zachte ochtendmist en houten gevel in natuur -->
     <img src="images/hero-ai.jpg" alt="Hotel Aurora: rustgevende gevel en tuin bij zonsopgang" class="hero-media" />
     <div class="container">
